# Arbitrage_bot_detector

./: .env  Cargo.toml  README.md  arbitrage.db
migrations/: 20231027120000_create_opportunities_table.sql
src/: arbitrage.rs  config.rs  db.rs  dex.rs  main.rs
src/abis/: uniswap_v3_quoter.json
