[package]
name = "polygon-arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["abigen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
chrono = "0.4"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
